[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reliable_robotics_interview"
version = "0.0.1"
authors = [
    {name="Matthew Paul", email="mattgpaul@gmail.com"},
]
description = "Reliable Robotics interview package"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

